--- a/security-game/src/App.css
+++ b/security-game/src/App.css
@@ -165,7 +165,7 @@ body, html, #root, canvas {
   background-color: #1E1E1E;
 }
 
-.game {
+.game, .password-checker {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -179,10 +179,13 @@ body, html, #root, canvas {
 
 .main-box {
   color: white;
+  margin-top: 190px;
   margin-right: 150px;
   margin-left: 10px;
   padding: 50px;
-  width: 300px;
+  width: 272px;
+  height: 500px;  /* adjust this value based on your requirements */
+  overflow: auto; /* to enable scroll if content exceeds the box's height */
   backdrop-filter: blur(12px); 
 }
 
@@ -257,11 +260,124 @@ body, html, #root, canvas {
 
 .sticker {
   position: fixed;   /* added this line */
-  top: 150px;
-  left: 380px;
+  top: 480px;
+  left: 30px;
   font-size: 2.5em;
   padding: 12px 25px;
   border-radius: 6px;
   transform: scale(1.1);
   transition: all 1.1s;
+}
+
+
+
+
+/* ... existing styles ... */
+
+.module-selector {
+  position: absolute;
+  top: 100px;
+  right: 250px; /* Move it to the top right */
+  z-index: 1;
+  display: flex;
+  gap: 10px;
+}
+
+
+
+button {
+  padding: 10px 20px;
+  border: none;
+  background-color: #61dafb;
+  color: #282c34;
+  cursor: pointer;
+  border-radius: 6px;
+  font-size: 1.1em;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #e1f070;
+}
+
+.active-btn {
+  background-color: #282c34;
+  color: #61dafb;
+}
+
+/* ... existing styles ... */
+
+.password-strength {
+  font-size: 1.2em; /* Adjust this to your preference for the "Password Strength" feedback */
+  margin-bottom: 10px; /* Optional: for some space between strength and tips */
+}
+
+.password-tip {
+  font-size: 0.9em; /* Adjust this to your preference for the tips */
+  margin-bottom: 8px; /* Space between each tip */
+}
+
+
+
+
+
+/* ... existing styles ... */
+
+.password-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 70%;
+
+}
+
+.password-heading {
+  font-size: 2em;
+  font-weight: bold;
+  color: #61dafb;
+  text-shadow: 2px 2px 4px #000;
+  margin-top: 50px;
+  margin-right: 40px;
+}
+
+.password-desc {
+  font-size: 1.2em;
+  color: white;
+  margin: 30px 0;
+  margin-right: 40px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.password-input {
+  padding: 15px;
+  border: 3px solid #61dafb;
+  border-radius: 6px;
+  margin-right: 70px;
+  margin-bottom: 15px;
+  color: #282c34;
+  font-size: 1.1em;
+}
+
+.password-tip {
+  font-size: 0.9em;
+  margin-bottom: 8px;
+}
+
+.password-feedback {
+  display: flex;
+  align-items: center;
+  color:white;
+  margin-right: 145px;
+}
+
+.feedback-tips {
+  display: flex;
+  flex-direction: column;
+  color: white;
+}
+
+.emoji {
+  margin-right: 10px;
 }
