--- a/security-game/src/App.css
+++ b/security-game/src/App.css
@@ -1,152 +1,3 @@
-/* 
-body, html, #root, canvas {
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-.canvasContainerStyle {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden;
-  background-color: #1E1E1E;
-}
-
-.game {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  padding: 20px;
-  background-size: cover;
-  background-color: 1E1E1E;
-  backdrop-filter: blur(10px);
-}
-.main-box {
-  color: white;
-  margin-right: 120px;
-  margin-left: 2px;
-  padding: 40px;
-  width: 250px;
-  box-shadow: 0px 0px 15px rgba(29, 24, 24, 0.2);
-  backdrop-filter: blur(10px); 
-}
-
-
-.search-section {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 40px;
-}
-
-.url-input {
-  flex: 1;
-  padding: 10px;
-  border: 2px solid #61dafb;
-  border-radius: 5px;
-  margin-right: 20px;
-  color: #282c34;
-}
-
-.check-btn, .answer {
-  background-color: #61dafb;
-  border: none;
-  color: #282c34;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s;
- 
-}
-.check-btn{
-  margin: 10px;
-}
-
-.check-btn:hover, .answer:hover {
-  background-color: #e1f070;
-}
-
-.question {
-  font-size: 1.5em;
-  margin-bottom: 30px;
-  font-weight: bold;
-}
-
-.answer {
-  background-color: #61dafb;
-  border: none;
-  color: #282c34;
-  padding: 10px 20px;
-  margin: 10px 5px; 
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.result-box {
-  margin-top: 30px;
-  padding: 20px;
-  background-color: rgba(24, 23, 23, 0.7);
-  border-radius: 10px;
-  backdrop-filter: blur(10px);
-}
-
-.result-score {
-  font-size: 1.5em;
-  font-weight: bold;
-  margin-bottom: 20px;
-  color: #61dafb; 
-}
-
-.result-likelihood {
-  font-size: 1.2em;
-  font-weight: bold;
-  margin-top: 10px;
-}
-
-.emoji {
-  font-size: 2em;
-  margin-right: 10px;
-}
-
-.sticker {
-  position: fixed;
-  top: 155%;
-  right: 35%;
-  font-size: 2em;
-  background-color: rgba(24, 23, 23, 0.8);
-  padding: 10px 20px;
-  border-radius: 5px;
-  opacity: 0;
-  backdrop-filter: blur(10px);
-  transform: scale(1);
-  transition: all 1s;
-}
-
-
-@keyframes fadeOut {
-  0% { opacity: 1; transform: scale(1); }
-  100% { opacity: 0; transform: scale(1.2); }
-}
-
-
-.sticker.show {
-  animation: fadeOut 1s forwards;
-  opacity: 1;
-} */
-
-
-
-
-/* In your App.css or equivalent */
-
 body, html, #root, canvas {
   margin: 0;
   width: 100%;
@@ -184,8 +35,8 @@ body, html, #root, canvas {
   margin-left: 10px;
   padding: 50px;
   width: 272px;
-  height: 500px;  /* adjust this value based on your requirements */
-  overflow: auto; /* to enable scroll if content exceeds the box's height */
+  height: 500px; 
+  overflow: auto; 
   backdrop-filter: blur(12px); 
 }
 
@@ -259,7 +110,7 @@ body, html, #root, canvas {
 }
 
 .sticker {
-  position: fixed;   /* added this line */
+  position: fixed;  
   top: 480px;
   left: 30px;
   font-size: 2.5em;
@@ -269,21 +120,14 @@ body, html, #root, canvas {
   transition: all 1.1s;
 }
 
-
-
-
-/* ... existing styles ... */
-
 .module-selector {
   position: absolute;
   top: 100px;
-  right: 250px; /* Move it to the top right */
+  right: 250px; 
   z-index: 1;
   display: flex;
   gap: 10px;
 }
-
-
 
 button {
   padding: 10px 20px;
@@ -305,23 +149,15 @@ button:hover {
   color: #61dafb;
 }
 
-/* ... existing styles ... */
-
 .password-strength {
-  font-size: 1.2em; /* Adjust this to your preference for the "Password Strength" feedback */
-  margin-bottom: 10px; /* Optional: for some space between strength and tips */
+  font-size: 1.2em;
+  margin-bottom: 10px; 
 }
 
 .password-tip {
-  font-size: 0.9em; /* Adjust this to your preference for the tips */
-  margin-bottom: 8px; /* Space between each tip */
+  font-size: 0.9em; 
+  margin-bottom: 8px; 
 }
-
-
-
-
-
-/* ... existing styles ... */
 
 .password-container {
   display: flex;
